Bug 92906 - VIEWING: badly rendered "Elements Dock" after collapse and expand
Summary: VIEWING: badly rendered "Elements Dock" after collapse and expand
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2015-07-24 05:17 UTC by Terrence Enger
Modified: 2016-08-19 18:04 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
collected screenshots (217.48 KB, application/vnd.oasis.opendocument.text)
2015-07-24 05:17 UTC, Terrence Enger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Terrence Enger 2015-07-24 05:17:38 UTC
Created attachment 117408 [details]
collected screenshots

.odt with collected screenshots:
page 1: Windows daily build, 2015-07-23, initial Math window and
        after “hide” and “show”
page 2: Windows daily build, 2015-07-23, initial Math window and
        after “hide” and “show”.  I collected these while
        following the STR below.
page 3: dbgutil bibisect repo version 2015-07-23 again, a
        different appearance after “hide” and “show”.  I collected
        this while I was working on something else, and I have no
        idea how to reproduce it.

STR
---

(1) Run LibreOffice with command-line parameter --math.  Program
    presents Math window "Untitled 1" with Elements Dock showing
    "Unary/Binary Operators", as per attached screenshot.

(2) Hide Elemets Dock; see the position of the mouse cursor in the
    screenshot from step (1), page 2 of the attached .odt.

(3) Show Elements Dock by clicking the the upper of the two small
    controls at the left edge of the screen, tooltip=Show.  The Math
    window has a truncated left pane, as per attached screenshot.
Comment 1 Terrence Enger 2015-07-24 05:19:12 UTC
Each version skipped initally displayed the Elements Dock empty with a grey background.  To bring back the symbols either ...
    (1.1) View > "Elements Dock"
    (1.2) View > "Elements Dock".  It is zero-width.
    (1.3) Drag it wider.
or
    (2.1) Close Formula Editor
    (2.2) In Start Center, click "Math Formula"


Working in the 50max bibisect repository, I see from `git bisect good` ...

    There are only 'skip'ped commits left to test.
    The first bad commit could be any of:
    5085c1b3aedd2e85b7146e38bb68d3091c337e1b
    3bfa94b1e7dab5408b80d32fd39897e72bbd265e
    d3126546b6b53bc9672f016cd5b2952f065ba1ce
    8e5c8145098f5d2c09bd031245b47af3448e599d
    b33570cf1baa3946363d34c59eee601eea4f1a94
    56c685408e1fe15f32ef7dfa22ab4aa099e1ae53
    We cannot bisect more!

and from `git bisect log` ...

    # bad: [dda106fd616b7c0b8dc2370f6f1184501b01a49e] source-hash-0db96caf0fcce09b87621c11b584a6d81cc7df86
    # good: [5b9dd620df316345477f0b6e6c9ed8ada7b6c091] source-hash-2851ce5afd0f37764cbbc2c2a9a63c7adc844311
    git bisect start 'latest' 'oldest'
    # bad: [0c30a2c797b249d0cd804cb71554946e2276b557] source-hash-45aaec8206182c16025cbcb20651ddbdf558b95d
    git bisect bad 0c30a2c797b249d0cd804cb71554946e2276b557
    # bad: [770ff0d1a74d2450c2decb349b62c5087e12c46b] source-hash-549b7fad48bb9ddcba7dfa92daea6ce917853a03
    git bisect bad 770ff0d1a74d2450c2decb349b62c5087e12c46b
    # good: [227af65db5e34efcf8dcb0b53333efecd30f37f8] source-hash-193c7ba9be48f00b46f9e789f233db577e7b3303
    git bisect good 227af65db5e34efcf8dcb0b53333efecd30f37f8
    # bad: [78b395d05689a5207f2ec4cc29ec296d64076a96] source-hash-a2e4be6ded508030a6c2a33919cbe8cb504382e0
    git bisect bad 78b395d05689a5207f2ec4cc29ec296d64076a96
    # good: [007a3bdb250e90e24298d01fa5a0c46f619b5990] source-hash-7948b273a9725c546e0dc32bece296dc872bdc04
    git bisect good 007a3bdb250e90e24298d01fa5a0c46f619b5990
    # good: [abab7bfa22adeecc8237aba0ebd741366d5d3fcf] source-hash-13de511e7c3c7423dbac7e8751c95cac17194b69
    git bisect good abab7bfa22adeecc8237aba0ebd741366d5d3fcf
    # good: [5115d351dd96d8f9f17a94741921cbd4b7f043a2] source-hash-e9dd158a866e60ffa5e3724f4aafdfca793da80a
    git bisect good 5115d351dd96d8f9f17a94741921cbd4b7f043a2
    # bad: [16b0039fd2e28527217367400b0ec75c95bc48c8] source-hash-4923624069d932b33f13017b4e288ad44eef8dbf
    git bisect bad 16b0039fd2e28527217367400b0ec75c95bc48c8
    # good: [38926883f00d5886e82a624559d23935cccb41a9] source-hash-3b0a1d7bd0502331e7e7892c9a571d8ddbd8ebe3
    git bisect good 38926883f00d5886e82a624559d23935cccb41a9
    # good: [8882c7dccb69e6877b090fe666878ef9b02d40fd] source-hash-acfd640fd8547d3275c5db714b88d52b3fe7c4d5
    git bisect good 8882c7dccb69e6877b090fe666878ef9b02d40fd
    # skip: [5085c1b3aedd2e85b7146e38bb68d3091c337e1b] source-hash-545ac4de25029ef114be48becbdb3329b0767e10
    git bisect skip 5085c1b3aedd2e85b7146e38bb68d3091c337e1b
    # skip: [b33570cf1baa3946363d34c59eee601eea4f1a94] source-hash-48c15285c52f6554f1aadab6068c076c2139ef89
    git bisect skip b33570cf1baa3946363d34c59eee601eea4f1a94
    # skip: [3bfa94b1e7dab5408b80d32fd39897e72bbd265e] source-hash-3582b314d45d3c5c650343a4bbc6fe812573743f
    git bisect skip 3bfa94b1e7dab5408b80d32fd39897e72bbd265e
    # skip: [8e5c8145098f5d2c09bd031245b47af3448e599d] source-hash-29ebb0ea9dd5371a4951ca55b88f7bebf85d04b9
    git bisect skip 8e5c8145098f5d2c09bd031245b47af3448e599d
    # skip: [d3126546b6b53bc9672f016cd5b2952f065ba1ce] source-hash-63d650b464ea108c3f2078cd1ce6b851dfc37120
    git bisect skip d3126546b6b53bc9672f016cd5b2952f065ba1ce
    # bad: [56c685408e1fe15f32ef7dfa22ab4aa099e1ae53] source-hash-2b34b48aacc10cbe256064f7606a114e232f3695
    git bisect bad 56c685408e1fe15f32ef7dfa22ab4aa099e1ae53
    # good: [6ff0a064b0a2000873913522b581c17c89bf301b] source-hash-5f60775f0f292ef4ff9590d6cff73628d03354dd
    git bisect good 6ff0a064b0a2000873913522b581c17c89bf301b
    # only skipped commits left to test
    # possible first bad commit: [56c685408e1fe15f32ef7dfa22ab4aa099e1ae53] source-hash-2b34b48aacc10cbe256064f7606a114e232f3695
    # possible first bad commit: [8e5c8145098f5d2c09bd031245b47af3448e599d] source-hash-29ebb0ea9dd5371a4951ca55b88f7bebf85d04b9
    # possible first bad commit: [3bfa94b1e7dab5408b80d32fd39897e72bbd265e] source-hash-3582b314d45d3c5c650343a4bbc6fe812573743f
    # possible first bad commit: [5085c1b3aedd2e85b7146e38bb68d3091c337e1b] source-hash-545ac4de25029ef114be48becbdb3329b0767e10
    # possible first bad commit: [d3126546b6b53bc9672f016cd5b2952f065ba1ce] source-hash-63d650b464ea108c3f2078cd1ce6b851dfc37120
    # possible first bad commit: [b33570cf1baa3946363d34c59eee601eea4f1a94] source-hash-48c15285c52f6554f1aadab6068c076c2139ef89
Comment 2 tommy27 2015-07-24 08:48:35 UTC
confirmed under Win7x64 using LibO 5.1.0.0.alpha1+ (x64)
Build ID: e92a8b92072284fd7c37d7bb3e1e8fe72a185f35
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-07-22_21:46:26
Locale: it-IT (it_IT)

status NEW. I also raise priority to highest.
Comment 3 Terrence Enger 2015-07-24 17:40:11 UTC
I have found a simpler workaround: When the Elelemts Dock is partly
rendered, move the mouse over the well-rendered top part, where
operators are showing.  The program renders the whole object
correctly.  I am setting importance Medium.

@tommy27:

Do you agree with Medium importance?  I would think that an even lower
importance might be okay.  After all, I was just looking for trouble
when I stumble over this.  A report from a real user would be a
different thing.

Thanks,
Terry
Comment 4 Robinson Tryon (qubit) 2015-12-13 11:13:08 UTC Comment hidden (obsolete)
Comment 5 Commit Notification 2016-08-15 16:19:24 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fd0f33b7766f09f64b62e150633601f607ee6897

Resolves: tdf#92906 badly rendered elements dock after hide+show

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Terrence Enger 2016-08-19 18:04:05 UTC
The bug is gone both in master commit a81eac7, pulled 2016-08-16,
built and running on debian-stretch and in Windows daily build of
2016-08-19.  I am setting status VERIFIED FIXED.

Thank you, Caolán.

In step (2) of the STR, I meant to collapse and expand the docked
toolbar using the small control on the right border of the toolbar.
Menu option View > Elements, by contrast, completely removes and
redisplays the toolbar without the problematic rendering.  I am
changing the bug summary accordingly.